added db information

--- a/LifeLog/.env
+++ b/LifeLog/.env
@@ -1,2 +1,8 @@
 PORT=3000
 JWT_SECRET=3ebw8g7edv8y2vdy8e2v8d
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=appdb
+DB_USER=appuser
+DB_PASS=apppass
+PORT=3000
