--- a/LifeLog/.env
+++ b/LifeLog/.env
@@ -1,8 +1,8 @@
 PORT=3000
 JWT_SECRET=3ebw8g7edv8y2vdy8e2v8d
+DB_SOCKET=/tmp/mysql.sock
+DB_USER=root
+DB_PASS=<the password you type when `mysql -u root -p` works>
+DB_NAME=appdb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=appdb
-DB_USER=appuser
-DB_PASS=apppass
-PORT=3000
