--- a/LifeLog/dockerfile
+++ b/LifeLog/dockerfile
@@ -1,15 +1,23 @@
-# app/Dockerfile
+
 FROM node:20-alpine
+
+RUN apk add --no-cache ffmpeg tini
+
+
 WORKDIR /usr/src/app
 
-# ffmpeg for your transcode route
-RUN apk add --no-cache ffmpeg
 
 COPY package*.json ./
 RUN npm ci --omit=dev
 
+
 COPY . .
+
+ENV NODE_ENV=production
 ENV PORT=3000
 EXPOSE 3000
+
+
+ENTRYPOINT ["/sbin/tini", "--"]
 
 CMD ["node", "app.js"]
