--- a/LifeLog/dockerfile
+++ b/LifeLog/dockerfile
@@ -1,15 +1,11 @@
-
 FROM node:20-alpine
 
-RUN apk add --no-cache ffmpeg tini
-
+RUN apk add --no-cache ffmpeg tini ca-certificates
 
 WORKDIR /usr/src/app
 
-
 COPY package*.json ./
 RUN npm ci --omit=dev
-
 
 COPY . .
 
@@ -17,7 +13,5 @@ ENV NODE_ENV=production
 ENV PORT=3000
 EXPOSE 3000
 
-
 ENTRYPOINT ["/sbin/tini", "--"]
-
 CMD ["node", "app.js"]
