--- a/LifeLog/docker-compose.yml
+++ b/LifeLog/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       DB_PASS: apppass
       DB_NAME: lifelog
       PORT: 3000
-      GEMINI_API_KEY: ${GEMINI_API_KEY}
-      JWT_SECRET: ${JWT_SECRET}
+      GEMINI_API_KEY: AIzaSyAMO_OyLp1BInE0jpdS03yrQBIxzivwAHM
+      JWT_SECRET: 3ebw8g7edv8y2vdy8e2v8d
     ports:
       - "3000:3000"
     depends_on:
